--- a/src/views/admin-views/info-base.ejs
+++ b/src/views/admin-views/info-base.ejs
@@ -43,12 +43,16 @@
                                     <% if (content=='brands' ) { %>
                                         <%- include ('brand-view/admin-brands', {data: data}) -%>
                                             <% } %>
-                                                <footer class="footer text-center">
-                                                    2021 © Ample
-                                                    Admin
-                                                    brought to you by
-                                                    <a href="https://www.wrappixel.com/">hoangpro</a>
-                                                </footer>
+                                                <!-- trang acount -->
+                                                <% if (content=='brands' ) { %>
+                                                    <%- include ('brand-view/admin-brands', {data: data}) -%>
+                                                        <% } %>
+                                                            <footer class="footer text-center">
+                                                                2021 © Ample
+                                                                Admin
+                                                                brought to you by
+                                                                <a href="https://www.wrappixel.com/">hoangpro</a>
+                                                            </footer>
                     </article>
             </section>
     </div>
