--- a/src/views/page-views/home.ejs
+++ b/src/views/page-views/home.ejs
@@ -80,9 +80,11 @@
 
                         <%- include('supplement/call-mess', {data: data.info}) -%>
 
+
     </div>
-    <script src="../../public/js/page-js/home-slick.js"></script>
-    <script src="../../public/js/page-js/header-toggle.js"></script>
+    <%- include('supplement/popup-product', {data: data.info}) -%>
+        <script src="../../public/js/page-js/home-slick.js"></script>
+        <script src="../../public/js/page-js/header-toggle.js"></script>
 
 </body>
 
