--- a/src/views/page-views/products.ejs
+++ b/src/views/page-views/products.ejs
@@ -328,8 +328,9 @@
                 <%- include('supplement/call-mess', {data: data.info}) -%>
 
     </div>
-    <script src="../../public/js/page-js/header-toggle.js"></script>
-    <script src="../../public/js/page-js/products.js"></script>
+    <%- include('supplement/popup-product', {data: data.info}) -%>
+        <script src="../../public/js/page-js/header-toggle.js"></script>
+        <script src="../../public/js/page-js/products.js"></script>
 </body>
 
 </html>
